--- a/css/styles.css
+++ b/css/styles.css
@@ -17,13 +17,52 @@ body {
     color: var(--paragraph-color);
 }
 
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+ul {
+    list-style-type: none;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left: 0;
+}
+
 a {
     text-decoration: none;
 }
 
-.header {}
+.container {
+    width: 100%;
+    max-width: 1440px;
+    margin: 0 auto;
+    outline: 2px solid red;
+}
 
-.header-nav {}
+.header {
+    padding-top: 24px;
+    padding-bottom: 24px;
+}
+
+.header-container {
+    display: flex;
+    align-items: center;
+    padding: 0 156px;
+}
+
+.header-navigation {
+    display: flex;
+    align-items: center;
+    flex-grow: 1;
+    justify-content: space-between;
+}
 
 .header-logo {
     font-family: "Raleway", sans-serif;
@@ -33,7 +72,8 @@ a {
     line-height: 1.17;
     letter-spacing: 0.03em;
     color: var(--logo-web-color);
-    text-transform: uppercase
+    text-transform: uppercase;
+    padding-right: 76px;
 }
 
 .link {
@@ -44,7 +84,15 @@ a {
     color: var(--title-color);
 }
 
-.header-list {}
+.header-list {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    max-width: 261px;
+    justify-content: space-between;
+    gap: 40px;
+    margin-right: 332px;
+}
 
 .list {
     list-style: none
@@ -63,11 +111,14 @@ a {
     color: #404bbf;
 }
 
-.address {
-    font-style: normal
-}
+.address {}
 
-.address-list {}
+.address-list {
+    font-style: normal;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
 
 .address-item {
     font-size: 16px;
@@ -81,9 +132,23 @@ a {
     color: #404bbf;
 }
 
+.mail {
+    padding-right: 40px;
+}
+
+.phone {}
 
 .hero {
     background: var(--title-color);
+    height: 600px;
+}
+
+.hero-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 188px 0;
+    gap: 48px;
 }
 
 .hero-title {
@@ -93,6 +158,8 @@ a {
     text-align: center;
     letter-spacing: 0.02em;
     color: #FFFFFF;
+    max-width: 496px;
+    margin: 0 auto;
 }
 
 .hero-btn {
@@ -104,6 +171,13 @@ a {
     color: #FFFFFF;
     background: #4D5AE5;
     cursor: pointer;
+    width: 100%;
+    height: 100px;
+    max-width: 169px;
+    max-height: 56px;
+    margin: 0 auto;
+    border-radius: 4px;
+    display: block;
 }
 
 .hero-btn:hover,
@@ -113,9 +187,19 @@ a {
 
 .qualities {}
 
-.qualities-title {}
+.qualities-list {
+    display: flex;
+    gap: 24px;
+    margin: 120px 156px;
+    width: 100%;
+    height: 100%;
+    max-width: 1128px;
+    max-height: 104px;
+}
 
-.qualities-list {}
+.qualities-item {
+    width: calc((100% - 96px) / 3);
+}
 
 .qualities-item-title {
     font-weight: 500;
@@ -134,6 +218,10 @@ a {
 
 .actions {}
 
+.action-container {
+    padding: 0px 156px;
+}
+
 .actions-title {
     font-weight: 700;
     font-size: 36px;
@@ -144,9 +232,16 @@ a {
     color: var(--title-color);
 }
 
-.actions-list {}
+.actions-list {
+    display: flex;
+    gap: 24px;
+    padding-top: 72px;
+    margin-bottom: 120px;
+}
 
-.actions-item {}
+.actions-item {
+    width: calc((100% - 72px) / 2);
+}
 
 .team {
     background: #F4F4FD;
@@ -160,14 +255,26 @@ a {
     letter-spacing: 0.02em;
     text-transform: capitalize;
     color: var(--title-color);
+    margin-top: 120px;
+    margin-bottom: 72px;
 }
 
 .team-list {
-    background-color: #FFFFFF
+    display: flex;
+    gap: 24px;
+    margin: 0 156px 120px;
 }
 
 .team-item {
-    background-color: #FFFFFF;
+    width: calc((100% - 96px) / 3);
+}
+
+.team-item-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 32px 0;
+    gap: 8px;
 }
 
 .team-item-title {
@@ -191,6 +298,10 @@ a {
     background: #2E2F42;
 }
 
+.footer-container {
+    padding: 100px 1020px 100px 156px;
+}
+
 .footer-logo {
     font-family: "Raleway", sans-serif;
     font-weight: 800;
@@ -210,13 +321,23 @@ a {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #F4F4FD;
+    margin-top: 16px;
 }
 
 .menu {}
 
-.menu-navigation-list {}
+.menu-navigation-list {
+    display: flex;
+    gap: 24px;
+    max-width: 586px;
+    margin: 0 auto;
+    padding-top: 96px;
+    padding-bottom: 72px;
+}
 
-.menu-navigation-item {}
+.menu-navigation-item {
+    width: calc((100% - 120px) / 4);
+}
 
 .menu-navigation-btn {
     font-family: "Roboto", sans-serif;
@@ -236,7 +357,24 @@ a {
     background: #404BBF;
 }
 
-.menu-list {}
+.menu-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 24px;
+    margin: 0 156px 120px;
+}
+
+.menu-item {
+    width: calc((100% - 96px) / 3);
+}
+
+.menu-item-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 32px 0;
+    gap: 8px;
+}
 
 .menu-item-title {
     font-weight: 500;
