--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,10 @@
     --paragraph-color: #434455;
 }
 
+:root {
+    --btn-color: #e7e9fc;
+}
+
 body {
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
@@ -39,16 +43,23 @@ a {
     text-decoration: none;
 }
 
+img {
+    display: block;
+}
+
 .container {
     width: 100%;
     max-width: 1440px;
     margin: 0 auto;
     outline: 2px solid red;
+    width: 1158px;
+    padding: 0 15px;
 }
 
 .header {
     padding-top: 24px;
     padding-bottom: 24px;
+    border-bottom: 1px solid #e7e9fc
 }
 
 .header-container {
@@ -73,7 +84,7 @@ a {
     letter-spacing: 0.03em;
     color: var(--logo-web-color);
     text-transform: uppercase;
-    padding-right: 76px;
+    margin-right: 76px
 }
 
 .link {
@@ -92,6 +103,7 @@ a {
     justify-content: space-between;
     gap: 40px;
     margin-right: 332px;
+    padding: 24px 0
 }
 
 .list {
@@ -118,6 +130,7 @@ a {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 40px;
 }
 
 .address-item {
@@ -141,6 +154,7 @@ a {
 .hero {
     background: var(--title-color);
     height: 600px;
+    padding: 188px 0;
 }
 
 .hero-container {
@@ -178,6 +192,8 @@ a {
     margin: 0 auto;
     border-radius: 4px;
     display: block;
+    min-width: 169px;
+    border: none;
 }
 
 .hero-btn:hover,
@@ -185,7 +201,23 @@ a {
     background-color: #404BBF;
 }
 
-.qualities {}
+.qualities {
+    padding: 120px 0
+}
+
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
 
 .qualities-list {
     display: flex;
@@ -207,6 +239,7 @@ a {
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: var(--title-color);
+    margin-bottom: 8px;
 }
 
 .qualities-item-paragraph {
@@ -216,7 +249,9 @@ a {
     color: var(--paragraph-color);
 }
 
-.actions {}
+.actions {
+    padding-bottom: 120px;
+}
 
 .action-container {
     padding: 0px 156px;
@@ -230,6 +265,7 @@ a {
     letter-spacing: 0.02em;
     text-transform: capitalize;
     color: var(--title-color);
+    margin-bottom: 72px;
 }
 
 .actions-list {
@@ -245,6 +281,7 @@ a {
 
 .team {
     background: #F4F4FD;
+    padding: 120px 0;
 }
 
 .team-title {
@@ -267,13 +304,14 @@ a {
 
 .team-item {
     width: calc((100% - 96px) / 3);
+    border-radius: 0px 0px 4px 4px;
 }
 
 .team-item-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 32px 0;
+    padding: 32px 16px;
     gap: 8px;
 }
 
@@ -284,6 +322,7 @@ a {
     text-align: center;
     letter-spacing: 0.02em;
     color: var(--title-color);
+    margin-bottom: 8px;
 }
 
 .team-item-paragraph {
@@ -296,6 +335,7 @@ a {
 
 .footer {
     background: #2E2F42;
+    padding: 100px 0;
 }
 
 .footer-container {
@@ -310,6 +350,8 @@ a {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: var(--logo-web-color);
+    display: inline-block;
+    margin-bottom: 16px;
 }
 
 .footer-logo .studio {
@@ -324,7 +366,10 @@ a {
     margin-top: 16px;
 }
 
-.menu {}
+.menu {
+    padding-top: 96px;
+    padding-bottom: 120px;
+}
 
 .menu-navigation-list {
     display: flex;
@@ -332,7 +377,8 @@ a {
     max-width: 586px;
     margin: 0 auto;
     padding-top: 96px;
-    padding-bottom: 72px;
+    margin-bottom: 72px;
+    justify-content: center;
 }
 
 .menu-navigation-item {
@@ -349,12 +395,16 @@ a {
     color: #4D5AE5;
     background: #F4F4FD;
     cursor: pointer;
+    padding: 12px 24px;
+    border: 1px solid var(--btn-color);
+    border-radius: 4px;
 }
 
 .menu-navigation-btn:hover,
 .menu-navigation-btn:focus {
     color: #FFFFFF;
     background: #404BBF;
+    border: 1px solid transparent;
 }
 
 .menu-list {
@@ -362,18 +412,20 @@ a {
     flex-wrap: wrap;
     gap: 24px;
     margin: 0 156px 120px;
+    row-gap: 48px;
 }
 
 .menu-item {
-    width: calc((100% - 96px) / 3);
+    width: calc((100% - 48px) / 3);
 }
 
 .menu-item-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 32px 0;
+    padding: 32px 16px;
     gap: 8px;
+    border: 1px solid #e7e9fc;
 }
 
 .menu-item-title {
@@ -382,6 +434,7 @@ a {
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: var(--title-color);
+    margin-bottom: 8px;
 }
 
 .menu-item-paragraph {
