--- a/css/styles.css
+++ b/css/styles.css
@@ -53,7 +53,7 @@ img {
     margin: 0 auto;
     outline: 2px solid red;
     width: 1158px;
-    padding: 0 15px;
+    padding: 0 15px 0 15px;
 }
 
 .header {
@@ -103,7 +103,7 @@ img {
     justify-content: space-between;
     gap: 40px;
     margin-right: 332px;
-    padding: 24px 0
+    padding: 24px 0;
 }
 
 .list {
@@ -205,18 +205,8 @@ img {
     padding: 120px 0
 }
 
-.visually-hidden {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    border: 0;
-    padding: 0;
-
-    white-space: nowrap;
-    clip-path: inset(100%);
-    clip: rect(0 0 0 0);
-    overflow: hidden;
+.hidden {
+    visibility: hidden;
 }
 
 .qualities-list {
@@ -276,7 +266,7 @@ img {
 }
 
 .actions-item {
-    width: calc((100% - 72px) / 2);
+    width: calc((100% - 48px) / 3);
 }
 
 .team {
@@ -303,7 +293,7 @@ img {
 }
 
 .team-item {
-    width: calc((100% - 96px) / 3);
+    width: calc((100% - 72px) / 4);
     border-radius: 0px 0px 4px 4px;
 }
 
@@ -383,6 +373,7 @@ img {
 
 .menu-navigation-item {
     width: calc((100% - 120px) / 4);
+    padding: 24px 0;
 }
 
 .menu-navigation-btn {
@@ -426,6 +417,7 @@ img {
     padding: 32px 16px;
     gap: 8px;
     border: 1px solid #e7e9fc;
+    border-top: none;
 }
 
 .menu-item-title {
