--- a/css/styles.css
+++ b/css/styles.css
@@ -155,7 +155,6 @@ img {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 188px 0;
     gap: 48px;
 }
 
@@ -216,7 +215,7 @@ img {
 .qualities-list {
     display: flex;
     gap: 24px;
-    margin: 120px 156px;
+    margin: 0 156px;
     width: 100%;
     height: 100%;
     max-width: 1128px;
@@ -224,7 +223,7 @@ img {
 }
 
 .qualities-item {
-    width: calc((100% - 96px) / 3);
+    width: calc ((100% - 96px) / 3);
 }
 
 .qualities-item-title {
@@ -265,17 +264,14 @@ img {
 .actions-list {
     display: flex;
     gap: 24px;
-    padding-top: 72px;
-    margin-bottom: 120px;
 }
 
 .actions-item {
-    width: calc((100% - 48px) / 3);
+    width: calc ((100% - 48px) / 3);
 }
 
 .team {
     background: #F4F4FD;
-    padding: 120px 0;
 }
 
 .team-title {
@@ -286,19 +282,20 @@ img {
     letter-spacing: 0.02em;
     text-transform: capitalize;
     color: var(--title-color);
-    margin-top: 120px;
+    padding-top: 120px;
     margin-bottom: 72px;
 }
 
 .team-list {
     display: flex;
     gap: 24px;
-    margin: 0 156px 120px;
+    margin: 0 156px;
 }
 
 .team-item {
-    width: calc((100% - 72px) / 4);
+    width: calc ((100% - 72px) / 4);
     border-radius: 0px 0px 4px 4px;
+    padding-bottom: 120px;
 }
 
 .team-item-container {
@@ -307,6 +304,7 @@ img {
     justify-content: center;
     padding: 32px 16px;
     gap: 8px;
+    background-color: #FFFFFF;
 }
 
 .team-item-title {
@@ -316,7 +314,6 @@ img {
     text-align: center;
     letter-spacing: 0.02em;
     color: var(--title-color);
-    margin-bottom: 8px;
 }
 
 .team-item-paragraph {
@@ -329,7 +326,6 @@ img {
 
 .footer {
     background: #2E2F42;
-    padding: 100px 0;
 }
 
 .footer-container {
@@ -357,27 +353,22 @@ img {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #F4F4FD;
-    margin-top: 16px;
 }
 
-.menu {
-    padding-top: 96px;
-    padding-bottom: 120px;
-}
+.menu {}
 
 .menu-navigation-list {
+    padding-top: 96px;
     display: flex;
     gap: 24px;
     max-width: 586px;
     margin: 0 auto;
-    padding-top: 96px;
-    margin-bottom: 72px;
-    justify-content: center;
+    margin-bottom: 40px;
+    justify-content: space-between;
 }
 
 .menu-navigation-item {
-    width: calc((100% - 120px) / 4);
-    padding: 24px 0;
+    width: calc ((100% - 120px) / 4);
 }
 
 .menu-navigation-btn {
@@ -390,7 +381,7 @@ img {
     color: #4D5AE5;
     background: #F4F4FD;
     cursor: pointer;
-    padding: 12px 24px;
+    padding: 12px 20px;
     border: 1px solid var(--btn-color);
     border-radius: 4px;
 }
@@ -408,10 +399,11 @@ img {
     gap: 24px;
     margin: 0 156px 120px;
     row-gap: 48px;
+    padding-top: 24px;
 }
 
 .menu-item {
-    width: calc((100% - 48px) / 3);
+    width: calc ((100% - 48px) / 3);
 }
 
 .menu-item-container {
@@ -419,7 +411,6 @@ img {
     flex-direction: column;
     justify-content: center;
     padding: 32px 16px;
-    gap: 8px;
     border: 1px solid #e7e9fc;
     border-top: none;
 }
